# parallel-genomeseq

./: .gitignore  CMakeLists.txt  Makefile  README.md  eulersetup.sh
.github/workflows/: ccpp.yml
benchmark/: leonhardsetup.sh  omp_finegrain_benchmark.sh
benchmark/ompfg/: data_get_chr22.sh  omp_finegrain_benchmark.sh  ompfg_bench_template.sh
benchmark/swps/: init_setup.sh  swps3_benchmark.c
cmake/: GetEigen.cmake  GetGTest.cmake  clang_tidy.cmake  warning_flags.cmake
data/: data_small_ground_truth.csv  reader.py  small_fq_0.txt  small_fq_1.txt
data/data_small/: genome.chr22.5K.fa  output_tiny_30xCov.mod.sam  output_tiny_30xCov1.fq  output_tiny_30xCov2.fq
data/query/: P02232.fasta
data/timings/: ompfg_timing_results.csv  timing_201911211804_ompfg1.csv  timing_201911211811_ompfg1.csv
data/uniprot/: stats.txt
doc/preliminary_report/: IEEEbib.bst  bibl_conf.bib  report.tex  spconf.sty
py/: benchmark_mediumpara.py  benchmark_swps.py  eval.py  ompfg_data_prep.py  reader.py  requirements.txt
src/: bwt_fm.cpp  localaligner.h  main.cpp  mpi_sw_solve_small.cpp  mpi_sw_solve_uniprot.cpp  mpi_sw_solve_uniprot3_single_backup.cpp  omp_sw_solve_small.cpp  omp_tests.cpp  similarity_matrix.cpp  sw_solve_big.cpp  sw_solve_small.cpp  swaligner.cpp
src/aligner/: localaligner.h  plocalaligner.cpp  plocalaligner.h  similaritymatrix.cpp  similaritymatrix.h  smithwaterman.cpp  smithwaterman.h  smithwatermanlinear.cpp  smithwatermanlinear.h  swaligner.cpp  swaligner.h
src/similaritymatrix/: similaritymatrix.cpp  similaritymatrix.h
test/: test_MPI.cpp  test_OpenMP.cpp  test_localaligner.cpp  test_similaritymatrix.cpp  test_skewedmatrix.cpp
