cmake_minimum_required(VERSION 3.12.0)
include("cmake/warning_flags.cmake")
option(HAS_CLANG_TIDY "use clang-tidy" OFF)
include("cmake/clang_tidy.cmake")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CC_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -pedantic -Wextra -g -ggdb ")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -Ofast -march=native -Wall -std=c++17")

project(GENOMESEQ)
include("cmake/GetEigen.cmake")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(TARGET_NAME parseqal)
option(DEBUG "debug mode" OFF)
option(USEMPI "Use MPI" OFF)
set(CMAKE_BUILD_TYPE "Release")

if (DEBUG)
  set(CMAKE_BUILD_TYPE "Debug")
  set(TARGET_NAME parseqal_debug)
  add_definitions(-DDEBUG)
endif ()

if (USEMPI)
  add_definitions(-DUSEMPI)
  find_package(MPI REQUIRED)
  message(STATUS "Using MPI_INCLUDE_PATH: ${MPI_INCLUDE_PATH}")
  message(STATUS "Using MPI_CXX_LIBRARIES: ${MPI_CXX_LIBRARIES}")
  message(STATUS "Using MPI_CXX_COMPILER: ${MPI_CXX_COMPILER}")
  include_directories(SYSTEM ${MPI_INCLUDE_PATH})
  set(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})
endif ()

aux_source_directory(${PROJECT_SOURCE_DIR}/src/aligner ALIGNER_SRCS)
add_library(libaligner ${ALIGNER_SRCS})
target_link_libraries(libaligner PUBLIC Eigen)
include_directories(${PROJECT_SOURCE_DIR}/src/aligner)

add_executable(${TARGET_NAME} src/main.cpp)
target_link_libraries(${TARGET_NAME} PUBLIC Eigen)
target_link_libraries(${TARGET_NAME} PRIVATE libaligner)
target_link_libraries(${TARGET_NAME} PRIVATE warning_flags)
#target_compile_definitions(${TARGET_NAME} PUBLIC -D_USE_MATH_DEFINES)

add_executable(bwt_fm src/bwt_fm.cpp)
target_link_libraries(bwt_fm PUBLIC Eigen)
target_link_libraries(bwt_fm PRIVATE libaligner)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)

include(cmake/GetGTest.cmake)
aux_source_directory(${PROJECT_SOURCE_DIR}/test TEST_SRCS)
add_executable(tests ${TEST_SRCS})
target_link_libraries(tests libaligner)
target_link_libraries(tests GTest)

if (USEMPI)
  target_link_libraries(${TARGET_NAME} PUBLIC ${MPI_CXX_LIBRARIES})
  target_link_libraries(tests ${MPI_CXX_LIBRARIES})
endif ()

if(CLANG_TIDY_EXE)
  set_target_properties(${TARGET_NAME} PROPERTIES CXX_CLANG_TIDY "${DO_CLANG_TIDY}")
endif()
